--- a/lib/click_web/live/short_link_public_live/short_link_public_live.html.heex
+++ b/lib/click_web/live/short_link_public_live/short_link_public_live.html.heex
@@ -3,9 +3,9 @@
 <table>
   <thead>
     <tr>
-      <th>Destination</th>
-      <th>Shortened URL</th>
-      <th>Hits</th>
+      <th>URL Original</th>
+      <th>URL Encurtada</th>
+      <th>Acessos</th>
     </tr>
   </thead>
   <tbody id="short_links" phx-update="prepend" phx-hook="ShortLinkTable">
